# cargo-toolchainer

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: main.rs  update_channel.rs  utils.rs
src/cli/: mod.rs  update.rs
